--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,7 @@
         <title>Hello World</title>
     </head>
     <body>
-<<<<<<< HEAD
-        <h1>Welcome to my beautiful website!</h1>
-=======
-        <h1 style= "color:red;"> Welcome to my beautiful website</h1>
->>>>>>> 4bd32ba94f91dd6c2b9717a667282485c42fac9f
+        <h1 style= "color:red;"> Welcome to my beautiful website!</h1>
         <h2>hello world!</h2>
         The lord is the greatest in the universe
     </body>
