--- a/hello.html
+++ b/hello.html
@@ -3,5 +3,8 @@
     <head>
         <title>Hello World</title>
     </head>
-    <body>The lord is the greatest in the universe</body>
+    <body>
+        <h1>Welcome to my beautiful website</h1>
+        The lord is the greatest in the universe
+    </body>
 </html>
