--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello World</title>
     </head>
     <body>
-        <h1>Welcome to my beautiful website</h1>
+        <h1>Welcome to my beautiful website!</h1>
         <h2>hello world!</h2>
         The lord is the greatest in the universe
     </body>
